--- a/src/velodyne_simulator/velodyne_gazebo_plugins/CMakeLists.txt
+++ b/src/velodyne_simulator/velodyne_gazebo_plugins/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(velodyne_gazebo_plugins)
 
 find_package(catkin REQUIRED COMPONENTS
@@ -11,10 +11,9 @@ find_package(gazebo REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
 
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES gazebo_ros_velodyne_laser
+  INCLUDE_DIRS include ${GAZEBO_INCLUDE_DIRS}
+  LIBRARIES gazebo_ros_velodyne_laser gazebo_ros_velodyne_gpu_laser
   CATKIN_DEPENDS roscpp sensor_msgs gazebo_ros
-  DEPENDS gazebo
 )
 
 include_directories(
@@ -34,7 +33,15 @@ target_link_libraries(gazebo_ros_velodyne_laser
   RayPlugin
 )
 
-install(TARGETS gazebo_ros_velodyne_laser
+add_library(gazebo_ros_velodyne_gpu_laser src/GazeboRosVelodyneLaser.cpp)
+target_link_libraries(gazebo_ros_velodyne_gpu_laser
+  ${catkin_LIBRARIES}
+  ${GAZEBO_LIBRARIES}
+  GpuRayPlugin
+)
+target_compile_definitions(gazebo_ros_velodyne_gpu_laser PRIVATE GAZEBO_GPU_RAY=1)
+
+install(TARGETS gazebo_ros_velodyne_laser gazebo_ros_velodyne_gpu_laser
         LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
 
